--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,53 @@
-name: Deploy React App to GitHub Pages
+name: CI/CD for React App
 
 on:
   push:
-    branches:
-      - main  # Change this to your default branch
+    branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
+      - uses: actions/checkout@v3
+      - name: Use Node.js 16
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Use the version of Node.js that your project requires
+          node-version: 16
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build the React app
-        run: npm run build
+      - name: Build the app
+        run: npm run build  # Assuming your build script is set to 'npm run build'
+
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: build
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build  # This job depends on the successful completion of the 'build' job
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: actions/deploy-pages@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          cname: 'your-custom-domain.com'  # Optional: Set a custom domain for your app (if applicable)
+          content: 'build'  # Folder containing your built React app
+
+env:
+  CI: true  # Set an environment variable for CI/CD detection
+
+
+        with:
+          github_token: ${{ secrets.CI_CD_TOKEN }}
           publish_dir: ./dist  # Change this to match your build output directory
