--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,31 @@
-name: CI/CD for React App
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main # Set this to your default branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 16
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: "16" # Use the Node.js version you need
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build the app
-        run: npm run build  # Assuming your build script is set to 'npm run build'
-
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifacts
-          path: build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build  # This job depends on the successful completion of the 'build' job
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
+      - name: Build project
+        run: npm run build
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          cname: 'your-custom-domain.com'  # Optional: Set a custom domain for your app (if applicable)
-          content: 'build'  # Folder containing your built React app
-
-env:
-  CI: true  # Set an environment variable for CI/CD detection
-
-
-        with:
-          github_token: ${{ secrets.CI_CD_TOKEN }}
-          publish_dir: ./dist  # Change this to match your build output directory
+          github_token: ${{ secrets.DEPLOY_TOKEN }}
+          publish_dir: ./dist
